--- a/src/GUI/DepartmentForm.fxml
+++ b/src/GUI/DepartmentForm.fxml
@@ -13,23 +13,25 @@
 
 <AnchorPane prefHeight="138.0" prefWidth="351.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.DepartmentFormController">
    <children>
-      <GridPane layoutX="37.0" layoutY="37.0" prefHeight="87.0" prefWidth="353.0" AnchorPane.leftAnchor="37.0" AnchorPane.topAnchor="37.0">
+      <GridPane layoutX="30.0" layoutY="14.0" prefHeight="109.0" prefWidth="352.0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="14.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="148.0" minWidth="10.0" prefWidth="61.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="245.0" minWidth="10.0" prefWidth="156.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="225.0" minWidth="10.0" prefWidth="149.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="54.0" minHeight="10.0" prefHeight="29.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="42.0" minHeight="6.0" prefHeight="31.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="48.0" minHeight="5.0" prefHeight="34.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="54.0" minHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="42.0" minHeight="0.0" prefHeight="16.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="49.0" minHeight="0.0" prefHeight="16.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="42.0" minHeight="0.0" prefHeight="18.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="Id" />
             <Label text="Name" GridPane.rowIndex="1" />
-            <TextField fx:id="txtId" editable="false" GridPane.columnIndex="1" />
-            <TextField fx:id="txtName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label fx:id="lableErrorName" text="error" textFill="#eb0000" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <TextField fx:id="txtId" editable="false" prefHeight="25.0" prefWidth="50.0" GridPane.columnIndex="1" />
+            <TextField fx:id="txtName" prefHeight="5.0" prefWidth="152.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label fx:id="lableErrorName" textFill="#eb0000" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
@@ -37,7 +39,7 @@
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <children>
                   <Button fx:id="btSave" mnemonicParsing="false" onAction="#onBtSaveAction" text="Salve" />
                   <Button fx:id="btCancel" mnemonicParsing="false" onAction="#onBtCancelAction" text="Cancel" />
