--- a/src/GUI/SellerForm.fxml
+++ b/src/GUI/SellerForm.fxml
@@ -34,8 +34,16 @@
 			<children>
 				<Label text="Id" />
 				<Label text="Name" GridPane.rowIndex="1" />
+				<Label text="Email" GridPane.rowIndex="2" />
+				<Label text="Birth Date" GridPane.rowIndex="3" />
+				<Label text="Base Salary" GridPane.rowIndex="4" />
+				<Label text="Department" GridPane.rowIndex="5" />
 				<TextField fx:id="txtId" editable="false" prefHeight="25.0" prefWidth="50.0" GridPane.columnIndex="1" />
 				<TextField fx:id="txtName" prefHeight="5.0" prefWidth="152.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+				<TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+				<DatePicker fx:id="dpBirthDate" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+				<TextField fx:id="txtBaseSalary" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <ComboBox fx:id="comboBoxDepartment" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 				<Label fx:id="lableErrorName" textFill="#eb0000" GridPane.columnIndex="2" GridPane.rowIndex="1">
 					<font>
 						<Font name="System Bold" size="12.0" />
@@ -47,19 +55,6 @@
 						<Insets left="10.0" />
 					</GridPane.margin>
 				</Label>
-				<HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
-					<children>
-						<Button fx:id="btSave" mnemonicParsing="false" onAction="#onBtSaveAction" text="Salve" />
-						<Button fx:id="btCancel" mnemonicParsing="false" onAction="#onBtCancelAction" text="Cancel" />
-					</children>
-				</HBox>
-				<Label text="Email" GridPane.rowIndex="2" />
-				<Label text="Birth Date" GridPane.rowIndex="3" />
-				<Label text="Base Salary" GridPane.rowIndex="4" />
-				<Label text="Department" GridPane.rowIndex="5" />
-				<TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-				<TextField fx:id="txtBaseSalary" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-				<DatePicker fx:id="dpBirthDate" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 				<Label fx:id="lableErrorEmail" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="2">
 					<font>
 						<Font name="System Bold" size="12.0" />
@@ -67,6 +62,9 @@
 					<padding>
 						<Insets left="10.0" />
 					</padding>
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
 				</Label>
 				<Label fx:id="lableErrorBirthDate" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="3">
 					<font>
@@ -75,6 +73,9 @@
 					<padding>
 						<Insets left="10.0" />
 					</padding>
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
 				</Label>
 				<Label fx:id="lableErrorBaseSalary" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="4">
 					<font>
@@ -83,8 +84,16 @@
 					<padding>
 						<Insets left="10.0" />
 					</padding>
+               <GridPane.margin>
+                  <Insets left="10.0" />
+               </GridPane.margin>
 				</Label>
-            <ComboBox fx:id="comboBoxDepartment" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+				<HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
+					<children>
+						<Button fx:id="btSave" mnemonicParsing="false" onAction="#onBtSaveAction" text="Salve" />
+						<Button fx:id="btCancel" mnemonicParsing="false" onAction="#onBtCancelAction" text="Cancel" />
+					</children>
+				</HBox>
 			</children>
 		</GridPane>
 	</children>
